<resources>
    <string name="app_name">SofaSoGood</string>

    <!-- Main Menu -->
    <string name="btn_start">Start</string>
    <string name="btn_credits">Credits</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_quit">Quit</string>

    <!-- Settings -->
    <string name="title_settings">Settings</string>
    <string name="label_volume">Music Volume</string>
    <string name="label_sound_volume">Sound Effects Volume</string>
    <string name="label_language">Language</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_back">Back</string>

    <!-- login -->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create Account</string>

    <!-- Register -->
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>

    <!-- Forgot Password Page -->
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_instruction">Please enter your registered email address.</string>
    <string name="btn_send_reset_email">Send reset email</string>
    <string name="reset_email_sent">A password reset email has been sent to your registered email address.</string>

    <!-- Navigation -->
    <string name="back">Back</string>
    <string name="next">Next</string>

    <!-- leaderboard -->
    <string name="title_leaderboard">Leaderboard</string>
    <string name="label_no_data">No data yet</string>

    <!-- Level Select -->
    <string name="title_levels">Levels</string>

    <!-- Credits -->
    <string name="title_credits">Credits</string>
    <string name="label_developed_by">Developed by</string>
    <string name="label_team">Team Speed</string>
    <string name="label_version">Version 1.0.0</string>

    <!-- Level Result -->
    <string name="title_level_complete">Level Complete!</string>
    <string name="label_finish_time">Time: %1$s</string>
    <string name="label_finish_steps">Steps: %d</string>
    <string name="label_finish_score">Score: %1$d</string>
    <string name="btn_next_level">Next Level</string>
    <string name="btn_exit">Exit</string>

    <!-- Pause -->
    <string name="title_paused">Paused</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_restart">Restart</string>

    <!-- Extra Contexts -->
    <string name="title_extra_contexts">Extra Contexts</string>
    <string name="btn_camera_mode">Camera Mode</string>
    <string name="btn_coming_soon">Coming Soon</string>
    <string name="btn_cat_mode">Bad Cat Mode</string>
    <string name="title_cat_mode">Naughty Cat</string>
    <string name="btn_bathroom_mode">Bathroom Mode</string>
    <string name="title_bathroom_mode">Bathroom Bump &amp; Slide</string>
    <string name="title_camera_mode">Camera Mode</string>
    <string name="label_asset_wall">Wall</string>
    <string name="label_asset_floor">Floor</string>
    <string name="label_asset_player">Player</string>
    <string name="label_asset_plant">Plant</string>
    <string name="label_asset_sofa_left">Sofa Left</string>
    <string name="label_asset_sofa_right">Sofa Right</string>
    <string name="label_asset_tv">TV</string>
    <string name="label_asset_tub_left">Tub Left</string>
    <string name="label_asset_tub_right">Tub Right</string>

    <!-- Level 1 -->
    <string name="l1_d1">So this is my new home!</string>
    <string name="l1_d2">It feels empty, but full of promise.</string>
    <string name="l1_d3">I need to arrange the furniture to settle in.</string>
    <string name="l1_d4">The sofa should go in the center of the living room.</string>
    <string name="l1_d5">Alright, let\u2019s get started!</string>

    <!-- Level 2 -->
    <string name="l2_d1">The kitchen is the heart of the home, it must be set first.</string>
    <string name="l2_d2">The fridge and cupboard should be placed conveniently.</string>
    <string name="l2_d3">These pieces are heavier than I imagined.</string>
    <string name="l2_d4">Better be careful not to scratch the floor.</string>
    <string name="l2_d5">Alright, time to push!</string>

    <!-- Level 3 -->
    <string name="l3_d1">The bathroom is small, but important.</string>
    <string name="l3_d2">The sink and toilet must be placed properly.</string>
    <string name="l3_d3">These items are tricky to move, take it slow.</string>
    <string name="l3_d4">Arranging them neatly will make it easier to use.</string>
    <string name="l3_d5">Alright, let\u2019s move it!</string>

    <!-- Level 4 -->
    <string name="l4_d1">The bedroom is for rest, it must feel cozy.</string>
    <string name="l4_d2">The bed should be near the window for sunlight.</string>
    <string name="l4_d3">The wardrobe is huge, I need to plan its spot carefully.</string>
    <string name="l4_d4">That way, the room will look neat.</string>
    <string name="l4_d5">Alright, let\u2019s move it!</string>

    <!-- Level 5 -->
    <string name="l5_d1">There are strange carvings under this table.</string>
    <string name="l5_d2">It looks like some kind of symbol.</string>
    <string name="l5_d3">Could it be left by the previous owner?</string>
    <string name="l5_d4">I need to move the furniture to see clearly.</string>
    <string name="l5_d5">Alright, let\u2019s move it!</string>

    <!-- Level 6 -->
    <string name="l6_d1">Why did the power go out suddenly?</string>
    <string name="l6_d2">Without electricity, nothing works.</string>
    <string name="l6_d3">I heard there\u2019s a backup generator.</string>
    <string name="l6_d4">I need to push it to the right spot to restore power.</string>
    <string name="l6_d5">Alright, let\u2019s move it!</string>

    <!-- Level 7 -->
    <string name="l7_d1">There\u2019s a hidden door in the corner!</string>
    <string name="l7_d2">There\u2019s a secret room behind the study.</string>
    <string name="l7_d3">The walls inside are covered in symbols.</string>
    <string name="l7_d4">What is this?</string>
    <string name="l7_d5">Let\u2019s move things and take a look.</string>

    <!-- Level 8 -->
    <string name="l8_d1">The symbols in the secret room are glowing.</string>
    <string name="l8_d2">They seem to be pointing me in a direction.</string>
    <string name="l8_d3">Maybe the furniture positions can trigger a mechanism.</string>
    <string name="l8_d4">I\u2019m a little scared\u2026</string>
    <string name="l8_d5">The furniture is heavy, I must push slowly.</string>

    <!-- Bathroom Mode Level 1 -->
    <string name="e1l1_d1">The next step is to clean the bathroom. Let me see…</string>
    <string name="e1l1_d2">(Water pipe bursts) Ahh! What happened?!</string>
    <string name="e1l1_d3">Oh no no no no！</string>
    <string name="e1l1_d4">There\'s water everywhere! The landlord didn\'t tell me any of this!</string>
    <string name="e1l1_d5">The water needs to be pushed into the drain.</string>
</resources>
